# codestuff

./: .clang-format
C++/: CMakeLists.txt  main.cpp
C++/BinarySearch/: BinarySearch.cpp  binary_search.cpp  binary_search.hpp
C++/BinarySearch/test/: binary_search_test.cpp
C++/EventNotifier/: client.cpp  client.h  event_notifier.cpp  event_notifier.h  main.cpp  observer.cpp  observer.h
C++/HashTable/: HashTable.cpp  HashTable.hpp  hash_table.cpp  hash_table.hpp  main.cpp
C++/HashTable/test/: hash_table_test.cpp
C++/Learning/: BasicExceptions.cpp  ReadWriteFile.cpp  input_file.txt
C++/NextGreat/: NextGreat.cpp  next_great.cpp  next_great.hpp
C++/NextGreat/test/: next_great_test.cpp
C++/SingleLinkedList/: SingleLinkedList.cpp  SingleLinkedList.hpp  main.cpp  single_linked_list.cpp  single_linked_list.hpp
C++/SingleLinkedList/test/: single_linked_list_test.cpp
C++/SortedBinaryTree/: SortedBinaryTree.cpp  SortedBinaryTree.hpp  main.cpp  sorted_binary_tree.cpp  sorted_binary_tree.hpp
C++/StringsFun/: StringsFun.cpp  strings_fun.cpp  strings_fun.hpp
C++/StringsFun/test/: strings_fun_test.cpp
C++/TwoThreads/: TwoThreads.cpp
C++/UdemyAdvancedCpp/: BasicExceptions.cpp
C/GenericStruct/: GenericStruct.c
C/GlibExamples/GobjectExample/: README.md  README.txt  config.json  my_example.c  my_example.h
C/LinkedListIntersection/: LinkedListIntersection.c
C/MySocket/: my_client  my_server  my_socket_client.c  my_socket_server.c
C/SharedMemory/: ShmReadWrite.c
C/TwoThreads/: a.out  two_threads.c
Python/MovieTitles/: main.py
golang/misc/: animals.go  arraysort.go  bsort.go  dining_philosophers.go  displace.go  mac.go  makejson.go  names.txt  newanimal.go  read.go  slice.go  table.go
